--- a/myweb/myweb/templates/base.html
+++ b/myweb/myweb/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse" style="background-color: #0000cc;">
+<nav class="navbar navbar-inverse" style="background-color: #2969b7;">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">WebSiteName</a>
@@ -20,6 +20,7 @@
       <li><a href="#">Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      <li><a href="{% url 'cart_view' %}"><span class="glyphicon glyphicon-shopping-cart"></span> Cart </a></li>
       <li><a href="{% url 'register' %}"><span class="glyphicon glyphicon-user"></span> Sign Up </a></li>
       <li><a href="{% url 'login_view' %}"><span class="glyphicon glyphicon-log-in"></span> Login </a></li>
       <li><a href="{% url 'profile' %}"><span class="glyphicon glyphicon-user"></span> Profile </a></li>
